--- a/po/es.po
+++ b/po/es.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-10-31 03:03+0000\n"
-"Last-Translator: Rafael Soler - Domatix <rafa.soler@domatix.com>\n"
+"PO-Revision-Date: 2012-11-23 00:10+0000\n"
+"Last-Translator: Christopher <Unknown>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-11-01 04:37+0000\n"
-"X-Generator: Launchpad (build 16218)\n"
+"X-Launchpad-Export-Date: 2012-11-23 05:07+0000\n"
+"X-Generator: Launchpad (build 16293)\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
@@ -45,13 +45,15 @@ msgstr ""
 
 #: GTG/plugins/export/export_templates/description_simple.py:18
 msgid "A simple Web page that can be easily printed."
-msgstr ""
+msgstr "Página web simple, fácil de imprimir"
 
 #: GTG/plugins/export/export_templates/description_simple.py:19
 msgid ""
 "A template to create a simple HTML page with some tasks that can be easily "
 "printed."
 msgstr ""
+"Plantilla para crear una pagina html simple con tareas que pueden ser "
+"fácilmente impresas."
 
 #: GTG/plugins/export/export_templates/description_textual.py:21
 msgid "Text-only"
@@ -75,6 +77,8 @@ msgstr ""
 #: GTG/plugins/export/export.py:120
 msgid "No task matches your criteria. Empty report can't be generated."
 msgstr ""
+"No hay tareas que coincidan con su búsqueda. No se puede generar un reporte "
+"vacío."
 
 #: GTG/plugins/export/export.py:138
 #, python-format
@@ -159,6 +163,8 @@ msgid ""
 "%s seems to be installed on your system, but it does not provide a DBus "
 "interface which is required by the Tomboy/Gnote plugin in GTG."
 msgstr ""
+"%s está instalado en el sistema, pero no provee una interfaz DBus que es "
+"requerida por el plugin Tomboy/Gnote en GTG"
 
 #: GTG/plugins/tomboy/tomboy.py:237
 msgid "That note does not exist!"
@@ -453,7 +459,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:209
 msgid "Learn How To Use Plugins"
-msgstr ""
+msgstr "Aprender a usar los complementos"
 
 #: GTG/core/firstrun_tasks.py:210
 msgid ""
@@ -470,7 +476,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:224
 msgid "Reporting Bugs"
-msgstr ""
+msgstr "Informando errores"
 
 #: GTG/core/firstrun_tasks.py:225
 msgid ""
@@ -489,7 +495,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:241
 msgid "Learn How To Use The Quick Add Entry"
-msgstr ""
+msgstr "Aprender a usar la entrada rápida"
 
 #: GTG/core/firstrun_tasks.py:242
 msgid ""
@@ -536,7 +542,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:287
 msgid "Learn How To Use Synchronization Services"
-msgstr ""
+msgstr "Aprender a usar los servicios de sincronización"
 
 #: GTG/core/firstrun_tasks.py:288
 msgid ""
@@ -562,7 +568,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:311
 msgid "Learn How To Search For Tasks"
-msgstr ""
+msgstr "Aprender a usar la búsqueda de tareas"
 
 #: GTG/core/firstrun_tasks.py:312
 msgid ""
@@ -686,7 +692,7 @@ msgstr "Identi.ca"
 
 #: GTG/backends/backend_identica.py:58
 msgid "Imports your identi.ca  messages into your GTG "
-msgstr ""
+msgstr "Importa tus mensajes de identi.ca a GTG "
 
 #: GTG/backends/backend_gnote.py:42
 msgid "Gnote"
@@ -763,7 +769,7 @@ msgstr "Twitter"
 
 #: GTG/backends/backend_twitter.py:58
 msgid "Imports your twitter  messages into your GTG "
-msgstr ""
+msgstr "Importa tus mensajes twitter a GTG "
 
 #: GTG/backends/backend_evolution.py:69
 msgid "Evolution tasks"
@@ -914,7 +920,7 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/addpanel.py:69
 msgid "Select synchronization service:"
-msgstr ""
+msgstr "Seleccionar el servicio de sincronización:"
 
 #: GTG/gtk/backends_dialog/addpanel.py:173
 msgid "Syncing is <span color=\"red\">disabled</span>"
@@ -968,11 +974,12 @@ msgstr "Importar tareas de sus twits"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:99
 msgid "Tag your GTG tasks with the bug tags"
-msgstr ""
+msgstr "Asignar las etiquetas de error a tus tareas en GTG"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:103
 msgid "Tag your GTG tasks with the project targeted by the bug"
 msgstr ""
+"Etiqueta tus tareas GTG con el proyecto al que está dirigido el error"
 
 #: GTG/gtk/backends_dialog/parameters_ui/passwordui.py:50
 msgid "Password:"
@@ -995,12 +1002,12 @@ msgstr[1] " minutos"
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
 msgid "Synchronization Services - %s"
-msgstr ""
+msgstr "Servicios de sincronización - %s"
 
 #: GTG/gtk/backends_dialog/__init__.py:302
 #, python-format
 msgid "Do you really want to remove the '%s' synchronization service?"
-msgstr ""
+msgstr "¿Estás seguro de desear eliminar el servicio de sincronización '%s'?"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:149
 msgid "Disable syncing"
@@ -1012,11 +1019,11 @@ msgstr "Activar sincronización"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:159
 msgid "This is the default synchronization service"
-msgstr ""
+msgstr "Servicio de sincronización por defecto"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:162
 msgid "Syncing is enabled."
-msgstr ""
+msgstr "Sincronización habilitada"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:164
 msgid "Syncing is <span color=\"red\">disabled</span>."
@@ -1122,7 +1129,7 @@ msgstr "Marcar como terminada"
 
 #: GTG/gtk/editor/__init__.py:32 GTG/gtk/browser/__init__.py:38
 msgid "Mark as not Done"
-msgstr ""
+msgstr "Marcar como no realizada"
 
 #: GTG/gtk/editor/__init__.py:34 GTG/gtk/browser/__init__.py:42
 msgid "Undismiss"
@@ -1187,12 +1194,12 @@ msgstr[1] "Venció hace %(days)d días"
 #: GTG/gtk/preferences.py:80
 #, python-format
 msgid "Preferences - %s"
-msgstr ""
+msgstr "Preferencias - %s"
 
 #: GTG/gtk/plugins.py:142
 #, python-format
 msgid "Plugins - %s"
-msgstr ""
+msgstr "Complementos - %s"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -1208,7 +1215,7 @@ msgstr ""
 
 #: GTG/gtk/preferences.glade.h:3
 msgid "Enable colored backgrounds in the task list"
-msgstr ""
+msgstr "Habilitar fondo de color para la lista de tareas"
 
 #: GTG/gtk/preferences.glade.h:4
 msgid "Show description preview in the task list."
@@ -1220,7 +1227,7 @@ msgstr "<b>Visor de tareas</b>"
 
 #: GTG/gtk/preferences.glade.h:6
 msgid "Font :"
-msgstr ""
+msgstr "Fuente:"
 
 #: GTG/gtk/preferences.glade.h:7
 msgid "<b>Editor</b>"
@@ -1240,29 +1247,31 @@ msgstr ""
 
 #: GTG/gtk/browser/tag_editor.py:87
 msgid "Remove selected icon"
-msgstr ""
+msgstr "Eliminar el icono seleccionado"
 
 #: GTG/gtk/browser/tag_editor.py:224
 msgid "Name : "
-msgstr ""
+msgstr "Nombre: "
 
 #: GTG/gtk/browser/tag_editor.py:231
 msgid "Show Tag in Work View :"
-msgstr ""
+msgstr "Mostrar etiqueta en la vista trabajo"
 
 #: GTG/gtk/browser/tag_editor.py:244
 msgid "Select Tag Color:"
-msgstr ""
+msgstr "Seleccionar color de la etiqueta"
 
 #: GTG/gtk/browser/tag_editor.py:284
 msgid ""
 "Click To\n"
 "Set Icon"
 msgstr ""
+"Hacer click para\n"
+"Seleccionar icono"
 
 #: GTG/gtk/browser/tag_editor.py:294
 msgid "Enter tag name here"
-msgstr ""
+msgstr "Introducir nombre de etiqueta"
 
 #: GTG/gtk/browser/__init__.py:37
 msgid "Mark the selected task as done"
@@ -1298,11 +1307,11 @@ msgstr "Mostrar sólo las tareas con las cuales se puede empezar ahora"
 
 #: GTG/gtk/browser/__init__.py:49
 msgid "Hide this tag from the workview"
-msgstr ""
+msgstr "Ocultar etiqueta de la vista de trabajo"
 
 #: GTG/gtk/browser/__init__.py:50
 msgid "Show this tag in the workview"
-msgstr ""
+msgstr "Mostrar etiqueta en la vista de trabajo"
 
 #: GTG/gtk/browser/__init__.py:51
 msgid "You can create, open or filter your tasks here"
@@ -1314,7 +1323,7 @@ msgstr "Limpiar"
 
 #: GTG/gtk/browser/modifytags_dialog.py:38
 msgid "NewTag"
-msgstr ""
+msgstr "Etiqueta nueva"
 
 #: GTG/gtk/browser/browser.py:586
 msgid "no active tasks"
@@ -1341,7 +1350,7 @@ msgstr ""
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:2
 msgid "Add/Remove Tags"
-msgstr ""
+msgstr "Agregar/eliminar etiquetas"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:3
 msgid "Cancel"
@@ -1349,7 +1358,7 @@ msgstr "Cancelar"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:4
 msgid "Enter the name of the tag(s) you wish to add or remove:"
-msgstr ""
+msgstr "Introducir el nombre de etiqueta(s) que agregará o eliminará:"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:5
 msgid "TagName"
@@ -1404,16 +1413,20 @@ msgid ""
 "Due to a network problem, I cannot contact the <b>%s</b> synchronization "
 "service."
 msgstr ""
+"Por problemas de conección, no se pudo contactar el servicio de "
+"sincronización <b>%s</b>."
 
 #: GTG/gtk/browser/custominfobar.py:43
 #, python-format
 msgid ""
 "Cannot connect to DBus, I've disabled the <b>%s</b> synchronization service."
 msgstr ""
+"No se pouede conectar a DBus, se ha desbilitado el servicio de "
+"sincronización <b>%s</b>."
 
 #: GTG/gtk/browser/custominfobar.py:105
 msgid "Configure synchronization service"
-msgstr ""
+msgstr "Configurar servicio de sincronización"
 
 #: GTG/gtk/browser/custominfobar.py:106
 msgid "Ignore"
@@ -1433,7 +1446,7 @@ msgstr "Continuar"
 
 #: GTG/gtk/browser/simple_color_selector.py:236
 msgid "Add custom color"
-msgstr ""
+msgstr "Agregar color personalizado"
 
 #: GTG/gtk/browser/simple_color_selector.py:264
 msgid "Choose a color"
@@ -1501,15 +1514,15 @@ msgstr "_Ayuda"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:17
 msgid "Open GTG help"
-msgstr ""
+msgstr "Abrir ayuda de GTG"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:18
 msgid "Help to translate GTG into your language"
-msgstr ""
+msgstr "Ayudar a traducir GTG a tu idioma"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:19
 msgid "Report a problem to GTG developers"
-msgstr ""
+msgstr "Reportar una error de GTG a los desarrolladores"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:20
 msgid "New Task"
@@ -1545,7 +1558,7 @@ msgstr "Acerca de GTG!"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:32
 msgid "Copyright © 2008-2012 Lionel Dricot, Bertrand Rousseau"
-msgstr ""
+msgstr "Derechos reservados © 2008-2012 Lionel Dricot, Bertrand Rousseau"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:33
 msgid ""
@@ -1588,7 +1601,7 @@ msgstr "Añadir una subtarea"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:43
 msgid "_Set Start Date"
-msgstr ""
+msgstr "_Seleccionar fecha de inicio"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:44
 msgid "T_oday"
@@ -1596,27 +1609,27 @@ msgstr ""
 
 #: GTG/gtk/browser/taskbrowser.glade.h:45
 msgid "_Tomorrow"
-msgstr ""
+msgstr "_Mañana"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:46
 msgid "Next _Week"
-msgstr ""
+msgstr "Próxima_semana"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:47
 msgid "Next _Month"
-msgstr ""
+msgstr "Próximo_mes"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:48
 msgid "Next _Year"
-msgstr ""
+msgstr "Próximo_año"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:49
 msgid "_Clear Start Date"
-msgstr ""
+msgstr "_Borrar fecha de inicio"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:50
 msgid "Set Due Date"
-msgstr ""
+msgstr "Establecer fecha de término"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:51
 msgid "_Now"
@@ -1624,15 +1637,15 @@ msgstr ""
 
 #: GTG/gtk/browser/taskbrowser.glade.h:52
 msgid "_Soon"
-msgstr ""
+msgstr "_Pronto"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:53
 msgid "_Someday"
-msgstr ""
+msgstr "_Algún día"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:54
 msgid "_Clear Due Date"
-msgstr ""
+msgstr "_Forrar fecha de término"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:55
 msgid "Modify Tags..."
